--- a/css/sub_layout.css
+++ b/css/sub_layout.css
@@ -1122,7 +1122,7 @@ section {
     font-size: 30px;
   }
   #intro .contentswrap p {
-    padding-top: 20px;
+    padding-top: 0;
     color: #484848;
     font-size: 16px;
     line-height: 24px;
